# lich

./: README.md
light-firmware/: Cargo.toml  README.md
light-firmware/src/: main.rs
